--- a/assets/scss/course-builder/segments/topic-content.scss
+++ b/assets/scss/course-builder/segments/topic-content.scss
@@ -88,7 +88,7 @@
                             display: flex;
                             > a {
                                 &:not(:last-child) {
-                                    margin-right: 3px;
+                                    margin-right: 6px;
                                 }
                             }
                         }
